# tabfmt

./: AUTHORS  ChangeLog  ChangeLog.0  ChangeLog.1  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
CVS/: Entries  Repository
build-aux/CVS/: Entries  Repository
doc/: Makefile.am  Makefile.in  tabfmt.info  tabfmt.texi  version.texi
doc/CVS/: Entries  Repository
lib/: Makefile.am  Makefile.in
lib/CVS/: Entries  Repository
m4/: gnulib-comp.m4
m4/CVS/: Entries  Repository
man/: Makefile.am  Makefile.in  tabfmt.1  tabfmt.x
man/CVS/: Entries  Repository
po/: Makevars  POTFILES.in  de.gmo  de.po  tabfmt.pot
po/CVS/: Entries  Repository
src/: Makefile.am  Makefile.in  tabfmt.c
src/CVS/: Entries  Repository
tests/: Makefile.am  Makefile.in  test-1
tests/CVS/: Entries  Repository
