## Process this file with automake to produce Makefile.in.

## Makefile.am for the doc subdirectory of the Tabfmt package.
## Copyright (C) 2005, 2006 Claudio Jolowicz
## 
## This program is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## This program is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this file; if not, write to the Free Software Foundation,
## Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
## 
## $Id: Makefile.am,v 1.1.1.1 2009/07/16 02:17:25 reynolds Exp $

info_TEXINFOS = tabfmt.texi
tabfmt_TEXINFOS = fdl.texi

## doc/Makefile.am ends here.
